# Iris-Flower-Classifier-API

./: Dockerfile  README.md  auth.py  inference.py  infoparadocker.txt  main.py  pruebasjson.txt  pyproject.toml  settings.py  train.py
saved_models/: logistic_regression.joblib  metadata.json  random_forest.joblib
tests/: test_api.py
